--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 [dependencies]
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
+openssl = { version = "0.10", features = ["vendored"] }
