added lint command to makefile

--- a/rpc/Makefile
+++ b/rpc/Makefile
@@ -1,7 +1,12 @@
 PORT = 8090
 BIN = florencenet.sh
 
+LINT_COMMAND = cargo clippy
+LINT_FLAGS = --all -- -D warnings
+
 start:
 	./$(BIN) start --rpc-port $(PORT)
 stop:
 	./$(BIN) stop
+lint:
+	$(LINT_COMMAND) $(LINT_FLAGS)
