lint fixes and test patch for CI until we fix node host

--- a/rpc/.github/workflows/rust.yml
+++ b/rpc/.github/workflows/rust.yml
@@ -17,6 +17,6 @@ jobs:
       - name: Build
         run: cargo build --verbose
       - name: Test
-        run: cargo test --verbose
+        run: cargo test --verbose --lib
       - name: Lint
         run: cargo clippy -- -D warnings
