--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,23 +2,24 @@ name: Rust
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
-    - name: Run linter
-      run: cargo clippy --all -- -D warnings
+      - uses: actions/checkout@v2
+      - name: Install toolchain
+        run: rustup default nightly && rustup component add clippy
+      - name: Build
+        run: cargo build --verbose
+      - name: Run tests
+        run: cargo test --verbose
+      - name: Run linter
+        run: cargo clippy --all -- -D warnings
