--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2018"
 url = "2.2.1"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
+serde_json = "1.0"
 
 [target.'cfg(unix)'.dependencies]
 openssl = { version = "0.10", features = ["vendored"] }
