--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -12,6 +12,7 @@ url = "2.2.1"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 
 [target.'cfg(unix)'.dependencies]
 openssl = { version = "0.10", features = ["vendored"] }
