--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2018"
 url = "2.2.1"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
-serde_json = "1.0"
+serde_json = { version = "1.0", features = ["preserve_order"] }
 serde = { version = "1.0", features = ["derive"] }
 
 [target.'cfg(unix)'.dependencies]
