--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 [dependencies]
 url = "2.2.1"
 chrono = "0.4.0"
+querystring = "1.1.0"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 serde_json = "1.0"
